--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^7.0.0",
     "chart.js": "^4.3.0",
+    "firebase": "^10.5.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
